* Refactor to JDK21 * Update library versions